--- a/config.example.yaml
+++ b/config.example.yaml
@@ -1,9 +1,10 @@
 services:
   qBittorrent:
-    interval: 3h
+    interval: "3h"
     ip_source:
-      type: "static"
-      value: "74.118.126.97"
+      type: "http"
+      url: "http://localhost:8000/v1/publicip/ip"
+      json_path: "public_ip"
     port_source:
       type: "file"
       path: "./tmp/qbittorrent/qBittorrent/qBittorrent.conf"
