--- a/config.example.yaml
+++ b/config.example.yaml
@@ -3,8 +3,9 @@ services:
     interval: "3h"
     ip_source:
       type: "http"
-      url: "http://localhost:8000/v1/publicip/ip"
-      json_path: "public_ip"
+      url: "https://api.ipify.org?format=json"
+      json_path: "ip"
+      proxy: "http://localhost:8888"
     port_source:
       type: "file"
       path: "./tmp/qbittorrent/qBittorrent/qBittorrent.conf"
